--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,12 @@
 [wheel]
 universal = 1
+
+[pytest]
+python_files = test*.py
+addopts = --tb=native -p no:doctest
+norecursedirs = bin dist docs htmlcov script hooks .* {args}
+
+[flake8]
+ignore = F999,E501,E128,E124,E402,W503,E731,C901
+max-line-length = 80
+exclude = .tox,.git,*/migrations/*,docs/*
